--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -24,94 +24,80 @@ workflows:
         script: |
           CI=false npm run build
           
-      - name: Remove and recreate iOS platform
+      - name: Update Capacitor config for iOS 13.0
         script: |
-          rm -rf ios
-          npx cap add ios
+          # Update capacitor.config.json to set minimum iOS version
+          node -e "
+          const fs = require('fs');
+          const config = JSON.parse(fs.readFileSync('capacitor.config.json', 'utf8'));
+          if (!config.ios) config.ios = {};
+          config.ios.minVersion = '13.0';
+          fs.writeFileSync('capacitor.config.json', JSON.stringify(config, null, 2));
+          console.log('Updated capacitor.config.json:', JSON.stringify(config, null, 2));
+          "
           
-      - name: Configure iOS project
+      - name: Add iOS platform with correct deployment target
         script: |
-          cd ios/App
+          # Set environment variable for Capacitor
+          export CAPACITOR_IOS_MIN_VERSION=13.0
           
-          # Set deployment target
-          sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 13.0/g' App.xcodeproj/project.pbxproj
+          # Add iOS platform
+          npx cap add ios || echo "iOS already added"
           
-          # Fix Podfile
-          echo "platform :ios, '13.0'" > Podfile.tmp
-          cat Podfile >> Podfile.tmp
-          mv Podfile.tmp Podfile
+          # Ensure the deployment target is set in the project
+          if [ -d "ios/App" ]; then
+            cd ios/App
+            
+            # Update the Xcode project deployment target
+            if [ -f "App.xcodeproj/project.pbxproj" ]; then
+              sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 13.0/g' App.xcodeproj/project.pbxproj
+              echo "Updated project.pbxproj deployment target"
+            fi
+            
+            cd ../..
+          fi
           
-          # Install pods
-          pod install
-          
-          cd ../..
-          
-      - name: Sync Capacitor
+      - name: Sync Capacitor with iOS 13.0
         script: |
+          # Set environment variable for pod install
+          export CAPACITOR_IOS_MIN_VERSION=13.0
+          
+          # Run sync which will generate Podfile with correct platform version
           npx cap sync ios
           
-      - name: Install ldid for fakesigning
-        script: |
-          brew install ldid
+          # Double-check and fix Podfile if needed
+          if [ -f "ios/App/Podfile" ]; then
+            cd ios/App
+            # Ensure platform is set to iOS 13.0
+            if ! grep -q "platform :ios, '13.0'" Podfile; then
+              sed -i '' "1s/^/platform :ios, '13.0'\n/" Podfile
+              echo "Added platform iOS 13.0 to Podfile"
+            fi
+            
+            # Run pod install again if we modified the Podfile
+            pod install
+            cd ../..
+          fi
           
-      - name: Build and fakesign IPA
+      - name: Build unsigned IPA
         script: |
           cd ios/App
-          
-          # Build the app
-          xcodebuild clean build \
-            -workspace App.xcworkspace \
+          xcodebuild -workspace App.xcworkspace \
             -scheme App \
-            -configuration Release \
+            -configuration Debug \
             -sdk iphoneos \
             -derivedDataPath build \
+            -archivePath build/App.xcarchive \
+            archive \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
-          
-          # Find the built app
-          APP_PATH=$(find build -name "*.app" -type d | head -n 1)
-          
-          # Create Payload directory
+            
+          # Create IPA for testing
           mkdir -p Payload
-          cp -r "$APP_PATH" Payload/App.app
-          
-          # Remove any existing signatures
-          rm -rf Payload/App.app/_CodeSignature
-          rm -f Payload/App.app/embedded.mobileprovision
-          
-          # Create a minimal entitlements file
-          cat > entitlements.plist << EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-              <key>application-identifier</key>
-              <string>FAKETEAMID.com.medicureon.app</string>
-              <key>get-task-allow</key>
-              <true/>
-          </dict>
-          </plist>
-          EOF
-          
-          # Fakesign the app binary
-          ldid -Sentitlements.plist Payload/App.app/App
-          
-          # Fakesign all frameworks
-          find Payload/App.app/Frameworks -name "*.framework" -type d | while read framework; do
-            framework_name=$(basename "$framework" .framework)
-            if [ -f "$framework/$framework_name" ]; then
-              ldid -S "$framework/$framework_name"
-            fi
-          done
-          
-          # Fakesign all dylibs
-          find Payload/App.app -name "*.dylib" -type f | while read dylib; do
-            ldid -S "$dylib"
-          done
-          
-          # Create the IPA
-          zip -r $CM_BUILD_DIR/MediCureOn-fakesigned.ipa Payload
+          cp -r build/App.xcarchive/Products/Applications/App.app Payload/
+          zip -r $CM_BUILD_DIR/MediCureOn.ipa Payload
           
     artifacts:
-      - $CM_BUILD_DIR/MediCureOn-fakesigned.ipa
+      - $CM_BUILD_DIR/MediCureOn.ipa
+      - ios/App/build/**/*.app
