--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     max_build_duration: 60
     environment:
       node: 22.14.0
-      xcode: 15.0
+      xcode: 15.4  # Updated to latest stable version
       cocoapods: default
     scripts:
       - name: Install dependencies with legacy peer deps
@@ -24,80 +24,92 @@ workflows:
         script: |
           CI=false npm run build
           
-      - name: Update Capacitor config for iOS 13.0
+      - name: Remove and recreate iOS platform
         script: |
-          # Update capacitor.config.json to set minimum iOS version
+          rm -rf ios
+          
+          # Update capacitor config for newer iOS
           node -e "
           const fs = require('fs');
           const config = JSON.parse(fs.readFileSync('capacitor.config.json', 'utf8'));
           if (!config.ios) config.ios = {};
-          config.ios.minVersion = '13.0';
+          config.ios.minVersion = '14.0';  // Increased minimum version
           fs.writeFileSync('capacitor.config.json', JSON.stringify(config, null, 2));
-          console.log('Updated capacitor.config.json:', JSON.stringify(config, null, 2));
           "
           
-      - name: Add iOS platform with correct deployment target
-        script: |
-          # Set environment variable for Capacitor
-          export CAPACITOR_IOS_MIN_VERSION=13.0
+          npx cap add ios
           
-          # Add iOS platform
-          npx cap add ios || echo "iOS already added"
-          
-          # Ensure the deployment target is set in the project
-          if [ -d "ios/App" ]; then
-            cd ios/App
-            
-            # Update the Xcode project deployment target
-            if [ -f "App.xcodeproj/project.pbxproj" ]; then
-              sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 13.0/g' App.xcodeproj/project.pbxproj
-              echo "Updated project.pbxproj deployment target"
-            fi
-            
-            cd ../..
-          fi
-          
-      - name: Sync Capacitor with iOS 13.0
-        script: |
-          # Set environment variable for pod install
-          export CAPACITOR_IOS_MIN_VERSION=13.0
-          
-          # Run sync which will generate Podfile with correct platform version
-          npx cap sync ios
-          
-          # Double-check and fix Podfile if needed
-          if [ -f "ios/App/Podfile" ]; then
-            cd ios/App
-            # Ensure platform is set to iOS 13.0
-            if ! grep -q "platform :ios, '13.0'" Podfile; then
-              sed -i '' "1s/^/platform :ios, '13.0'\n/" Podfile
-              echo "Added platform iOS 13.0 to Podfile"
-            fi
-            
-            # Run pod install again if we modified the Podfile
-            pod install
-            cd ../..
-          fi
-          
-      - name: Build unsigned IPA
+      - name: Configure iOS project for iOS 18 compatibility
         script: |
           cd ios/App
-          xcodebuild -workspace App.xcworkspace \
+          
+          # Set deployment target to iOS 14.0 (better compatibility)
+          sed -i '' 's/IPHONEOS_DEPLOYMENT_TARGET = [0-9.]*/IPHONEOS_DEPLOYMENT_TARGET = 14.0/g' App.xcodeproj/project.pbxproj
+          
+          # Update Info.plist for iOS 18 compatibility
+          /usr/libexec/PlistBuddy -c "Set :MinimumOSVersion 14.0" App/Info.plist || true
+          /usr/libexec/PlistBuddy -c "Add :UIRequiresFullScreen bool YES" App/Info.plist || true
+          /usr/libexec/PlistBuddy -c "Add :ITSAppUsesNonExemptEncryption bool NO" App/Info.plist || true
+          
+          # Fix Podfile
+          echo "platform :ios, '14.0'" > Podfile.tmp
+          echo "use_frameworks! :linkage => :static" >> Podfile.tmp
+          cat Podfile >> Podfile.tmp
+          mv Podfile.tmp Podfile
+          
+          # Install pods
+          pod install
+          
+          cd ../..
+          
+      - name: Sync Capacitor
+        script: |
+          npx cap sync ios
+          
+      - name: Build IPA for iOS 18
+        script: |
+          cd ios/App
+          
+          # Clean build
+          xcodebuild clean
+          
+          # Build with iOS 18 compatibility
+          xcodebuild build \
+            -workspace App.xcworkspace \
             -scheme App \
-            -configuration Debug \
+            -configuration Release \
             -sdk iphoneos \
             -derivedDataPath build \
+            -destination "generic/platform=iOS" \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO \
+            IPHONEOS_DEPLOYMENT_TARGET=14.0 \
+            TARGETED_DEVICE_FAMILY="1,2" \
+            ONLY_ACTIVE_ARCH=NO \
+            VALID_ARCHS="arm64" \
+            ARCHS="arm64"
+          
+          # Archive
+          xcodebuild archive \
+            -workspace App.xcworkspace \
+            -scheme App \
+            -configuration Release \
             -archivePath build/App.xcarchive \
-            archive \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
-            
-          # Create IPA for testing
+          
+          # Create IPA
           mkdir -p Payload
           cp -r build/App.xcarchive/Products/Applications/App.app Payload/
+          
+          # Remove signatures
+          find Payload -name "_CodeSignature" -type d -exec rm -rf {} + 2>/dev/null || true
+          find Payload -name "*.mobileprovision" -type f -delete 2>/dev/null || true
+          
+          # Create IPA
           zip -r $CM_BUILD_DIR/MediCureOn.ipa Payload
           
     artifacts:
       - $CM_BUILD_DIR/MediCureOn.ipa
-      - ios/App/build/**/*.app
