Phase 4: Ready for iOS testing with Apple Health

--- a/.env.development
+++ b/.env.development
@@ -37,3 +37,7 @@ REACT_APP_STRIPE_LIVE_STANDARD_PRODUCT_ID=prod_SVlm4inBMzipU1
 REACT_APP_STRIPE_LIVE_SILVER_PRODUCT_ID=prod_SVlvVV2Gx68jCW
 REACT_APP_STRIPE_LIVE_GOLD_PRODUCT_ID=prod_SVlxWadp5GcPuq
 REACT_APP_STRIPE_LIVE_PLATINUM_PRODUCT_ID=prod_SVlyZ3BJ32Tos4
+
+# IoMT Function Keys
+REACT_APP_IOMT_DATA_SAVE_KEY=4JTTDVg3nbWJzJwQWuXSeB3V_G8hyXL3Vs47MZjb0BqXAzFuvDGFBQ==
+REACT_APP_IOMT_DATA_GET_KEY=y1iSLPBYfza3MxF2idY4Ev_eOfqvnWYDL3E_Z3OYFveHAzFuaf1thA==
