--- a/.env.production
+++ b/.env.production
@@ -54,3 +54,7 @@ REACT_APP_UNENROLL_PLAN_KEY=your-unenroll-plan-key
 # Feature Flags
 REACT_APP_ENABLE_IOMT=false
 REACT_APP_ENABLE_ANALYTICS=false
+
+# IoMT Function Keys
+REACT_APP_IOMT_DATA_SAVE_KEY=4JTTDVg3nbWJzJwQWuXSeB3V_G8hyXL3Vs47MZjb0BqXAzFuvDGFBQ==
+REACT_APP_IOMT_DATA_GET_KEY=y1iSLPBYfza3MxF2idY4Ev_eOfqvnWYDL3E_Z3OYFveHAzFuaf1thA==
