--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@azure/msal-react": "^3.0.12",
     "@capacitor/android": "^7.4.0",
     "@capacitor/core": "^7.4.0",
+    "@capacitor/device": "^7.0.1",
     "@capacitor/ios": "^7.4.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
-    "capacitor-health": "^0.0.14",
+    "capacitor-health-connect": "^0.7.0",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.513.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.0",
+    "ajv": "^8.17.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17"
