--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@capacitor/core": "^7.4.0",
     "@capacitor/device": "^7.0.1",
     "@capacitor/ios": "^7.4.0",
+    "@perfood/capacitor-healthkit": "^2.0.0-alpha.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
