--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "@capacitor/core": "^7.4.0",
     "@capacitor/device": "^7.0.1",
     "@capacitor/ios": "^7.4.0",
-    "@perfood/capacitor-healthkit": "^2.0.0-alpha.2",
+    "@perfood/capacitor-healthkit": "^1.3.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
-    "capacitor-health-connect": "^0.7.0",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.513.0",
