Phase 4: Ready for iOS testing with Apple Health

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -49,7 +49,7 @@
 	<key>NSHealthShareUsageDescription</key>
 	<string>MediCureOn needs access to your health data to provide personalized health insights and track your wellness progress.</string>
 	<key>NSHealthUpdateUsageDescription</key>
-	<string>MediCureOn needs permission to save health data from manual entries and connected devices.</string>
+	<string>MediCureOn needs permission to save health data from manual entries.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
