Phase 4: Ready for iOS testing with Apple Health

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -9,7 +9,8 @@
   },
   "ios": {
     "contentInset": "automatic",
-    "limitsNavigationsToAppBoundDomains": true
+    "limitsNavigationsToAppBoundDomains": true,
+    "minVersion": "14.0"
   },
   "plugins": {
     "SplashScreen": {
